<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pylon_usb_instant_camera</name>
  <version>2.0.0</version>
  <description>Access to Basler camera via Pylon CBaslerUsbInstantCamera API. Supports high-performance, arbitrary framerate, free-running mode.</description>
  <maintainer email="hoe@fh-wedel.de">Hermann Höhne</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/fhwedel-hoe/pylon_usb-instant-camera</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
